--- a/configuration.json
+++ b/configuration.json
@@ -3,16 +3,16 @@
   "vocab_folder"     : "vocabs/sub_vocab_bert.txt",
   "max_len"          : 148,
   "batch_size"       : 8,
-  "buffer_size"      : 320,
+  "buffer_size"      : 1920,
   "mask_prob"        : 0.15,
   "num_layers"       : 4,
   "d_model"          : 128,
   "num_heads"        : 4,
   "dff"              : 128,
   "rate"             : 0.1,
-  "epochs"           : 350,
+  "epochs"           : 50,
   "learning_rate"    : 2e-5,
   "data_file"        : "data/formulas/train.txt",
-  "train"            : false,
+  "train"            : true,
   "infer"            : true
 }
