--- a/configuration.json
+++ b/configuration.json
@@ -10,10 +10,10 @@
   "num_heads"        : 4,
   "dff"              : 128,
   "rate"             : 0.1,
-  "epochs"           : 500,
+  "epochs"           : 100,
   "learning_rate"    : 2e-5,
   "data_file"        : "data/formulas/train.txt",
   "train"            : true,
   "infer"            : true,
-  "eager"            : true
+  "eager"            : false
 }
