--- a/configuration.json
+++ b/configuration.json
@@ -2,7 +2,8 @@
   "data"     : {
     "checkpoint_folder": "checkpoints/formulas",
     "vocab_folder"     : "vocabs/sub_vocab_bert_file.txt",
-    "data_file"        : "data/formulas/train.txt",
+    "train_data_file"  : "data/formulas/train.txt",
+    "test_data_file"   : "data/formulas/test.txt",
     "validation_file"  : "data/formulas/validation.txt",
     "cpu_threads"      : 8
   },
@@ -17,10 +18,11 @@
     "drop_rate"        : 0.1
   },
   "training" : {
-    "batch_size"   : 16,
-    "buffer_size"  : 1920,
-    "epochs"       : 100,
-    "learning_rate": 2e-5
+    "batch_size"       : 8,
+    "train_buffer_size": 8,
+    "test_buffer_size" : 0,
+    "epochs"           : 100,
+    "learning_rate"    : 2e-5
   },
   "execution": {
     "train": true,
