--- a/configuration.json
+++ b/configuration.json
@@ -9,25 +9,26 @@
     "cpu_threads"          : 8
   },
   "model"    : {
-    "vocab_size"       : 207,
-    "max_seq_len"      : 195,
+    "vocab_size"       : 512,
+    "max_seq_len"      : 256,
     "mask_prob"        : 0.15,
     "num_layers"       : 4,
-    "hidden_size"      : 384,
+    "hidden_size"      : 128,
     "intermediate_size": 3072,
     "num_heads"        : 4,
     "drop_rate"        : 0.1
   },
   "training" : {
-    "batch_size"       : 128,
-    "train_buffer_size": 896000,
-    "test_buffer_size" : 43520,
-    "epochs"           : 60,
+    "batch_size"       : 256,
+    "train_buffer_size": 1093120,
+    "test_buffer_size" : 50176,
+    "epochs"           : 10,
     "learning_rate"    : 2e-5
   },
   "execution": {
     "train": true,
     "infer": true,
-    "eager": false
+    "eager": false,
+    "debug": false
   }
 }
