- Gaussian Linear Unit - Moving Learning Rate

--- a/configuration.json
+++ b/configuration.json
@@ -2,10 +2,10 @@
   "data"     : {
     "checkpoint_folder"    : "checkpoints/formulas",
     "vocab_folder"         : "vocabs/sub_vocab_bert_file.txt",
-    "train_data_file"      : "data/formulas/train.txt",
-    "test_data_file"       : "data/formulas/test.txt",
-    "train_validation_file": "data/formulas/train_validation.txt",
-    "test_validation_file" : "data/formulas/test_validation.txt",
+    "train_data_file"      : "data/in_order_formulas/train.txt",
+    "test_data_file"       : "data/in_order_formulas/test.txt",
+    "train_validation_file": "data/in_order_formulas/train_validation.txt",
+    "test_validation_file" : "data/in_order_formulas/test_validation.txt",
     "cpu_threads"          : 8
   },
   "model"    : {
@@ -14,21 +14,21 @@
     "mask_prob"        : 0.15,
     "num_layers"       : 4,
     "hidden_size"      : 128,
-    "intermediate_size": 3072,
+    "intermediate_size": 768,
     "num_heads"        : 4,
     "drop_rate"        : 0.1
   },
   "training" : {
-    "batch_size"       : 256,
-    "train_buffer_size": 1093120,
-    "test_buffer_size" : 50176,
-    "epochs"           : 10,
-    "learning_rate"    : 2e-5
+    "batch_size"       : 16,
+    "train_buffer_size": 64,
+    "test_buffer_size" : 16,
+    "epochs"           : 100,
+    "learning_rate"    : 1e-4
   },
   "execution": {
     "train": true,
     "infer": true,
-    "eager": false,
+    "eager": true,
     "debug": false
   }
 }
