--- a/configuration.json
+++ b/configuration.json
@@ -19,16 +19,16 @@
     "drop_rate"        : 0.1
   },
   "training" : {
-    "batch_size"       : 16,
-    "train_buffer_size": 64,
-    "test_buffer_size" : 16,
+    "batch_size"       : 128,
+    "train_buffer_size": 1093632,
+    "test_buffer_size" : 50176,
     "epochs"           : 100,
-    "learning_rate"    : 1e-4
+    "learning_rate"    : 5e-5
   },
   "execution": {
     "train": true,
     "infer": true,
-    "eager": true,
+    "eager": false,
     "debug": false
   }
 }
