--- a/configuration.json
+++ b/configuration.json
@@ -2,8 +2,8 @@
   "data"     : {
     "checkpoint_folder"    : "checkpoints/formulas",
     "vocab_folder"         : "vocabs/sub_vocab_bert_file.txt",
-    "train_data_file"      : "data/in_order_formulas/train.txt",
-    "test_data_file"       : "data/in_order_formulas/test.txt",
+    "train_data_dir"       : "data/in_order_formulas/train/",
+    "test_data_dir"        : "data/in_order_formulas/test/",
     "train_validation_file": "validation/in_order_formulas/train_validation.txt",
     "test_validation_file" : "validation/in_order_formulas/test_validation.txt",
     "cpu_threads"          : 8
@@ -19,16 +19,17 @@
     "drop_rate"        : 0.1
   },
   "training" : {
-    "batch_size"       : 256,
-    "train_buffer_size": 3280384,
-    "test_buffer_size" : 251648,
-    "epochs"           : 15,
-    "learning_rate"    : 2e-5
+    "batch_size"       : 16,
+    "train_buffer_size": 1920,
+    "test_buffer_size" : 16,
+    "blocks"           : 1,
+    "epochs"           : 0,
+    "learning_rate"    : 1e-4
   },
   "execution": {
     "train": true,
     "infer": true,
-    "eager": false,
-    "debug": false
+    "eager": true,
+    "debug": true
   }
 }
