--- a/configuration.json
+++ b/configuration.json
@@ -22,7 +22,8 @@
     "batch_size"       : 128,
     "train_buffer_size": 999936,
     "test_buffer_size" : 128,
-    "blocks"           : 14,
+    "train_blocks"     : 14,
+    "test_blocks"      : 1,
     "epochs"           : 10,
     "learning_rate"    : 2e-5
   },
