--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,8 @@
 name: math_exp_bert_env
 dependencies:
  - python=3.6
- - tensorflow-gpu=2.0.0
+ - tensorflow-gpu=2.2.0
  - tensorflow-datasets
  - numpy
+ - matplotlib
+ - lxml
