--- a/configuration.json
+++ b/configuration.json
@@ -31,7 +31,7 @@
     "gpu_mode": "-1",
     "train"   : true,
     "infer"   : true,
-    "eager"   : true,
+    "eager"   : false,
     "debug"   : true
   }
 }
