--- a/configuration.json
+++ b/configuration.json
@@ -1,37 +1,38 @@
 {
-  "data"     : {
-    "checkpoint_folder"    : "checkpoints/formulas",
-    "vocab_folder"         : "vocabs/sub_vocab_bert_file.txt",
-    "train_data_dir"       : "data/in_order_formulas/train/",
-    "test_data_dir"        : "data/in_order_formulas/test/",
+  "data":      {
+    "checkpoint_factor":     1,
+    "checkpoint_folder":     "checkpoints/formulas",
+    "vocab_folder":          "vocabs/sub_vocab_bert_file.txt",
+    "train_data_dir":        "data/in_order_formulas/train/",
+    "test_data_dir":         "data/in_order_formulas/test/",
     "train_validation_file": "validation/in_order_formulas/train_validation.txt",
-    "test_validation_file" : "validation/in_order_formulas/test_validation.txt",
-    "cpu_threads"          : 8
+    "test_validation_file":  "validation/in_order_formulas/test_validation.txt",
+    "cpu_threads":           8
   },
-  "model"    : {
-    "vocab_size"       : 512,
-    "max_seq_len"      : 256,
-    "mask_prob"        : 0.15,
-    "num_layers"       : 4,
-    "hidden_size"      : 128,
+  "model":     {
+    "vocab_size":        512,
+    "max_seq_len":       256,
+    "mask_prob":         0.15,
+    "num_layers":        4,
+    "hidden_size":       128,
     "intermediate_size": 768,
-    "num_heads"        : 4,
-    "drop_rate"        : 0.1
+    "num_heads":         4,
+    "drop_rate":         0.1
   },
-  "training" : {
-    "batch_size"       : 512,
+  "training":  {
+    "batch_size":        512,
     "train_buffer_size": 999936,
-    "test_buffer_size" : 999936,
-    "train_blocks"     : 106,
-    "test_blocks"      : 1,
-    "epochs"           : 10,
-    "learning_rate"    : 2e-5
+    "test_buffer_size":  999936,
+    "train_blocks":      106,
+    "test_blocks":       1,
+    "epochs":            10,
+    "learning_rate":     2e-5
   },
   "execution": {
     "gpu_mode": "-1",
-    "train"   : true,
-    "infer"   : true,
-    "eager"   : false,
-    "debug"   : true
+    "train":    true,
+    "infer":    true,
+    "eager":    false,
+    "debug":    true
   }
 }
