--- a/configuration.json
+++ b/configuration.json
@@ -1,12 +1,12 @@
 {
   "data":      {
     "checkpoint_factor":     1,
-    "checkpoint_folder":     "checkpoints/l4_h128_lw",
+    "checkpoint_folder":     "checkpoints/l12_h512_io",
     "vocab_folder":          "vocabs/sub_vocab_bert_file.txt",
-    "train_data_dir":        "data/layerwise/train/",
-    "test_data_dir":         "data/layerwise/test/",
-    "train_validation_file": "validation/layerwise/train_validation.txt",
-    "test_validation_file":  "validation/layerwise/test_validation.txt",
+    "train_data_dir":        "data/in_order_formulas/train/",
+    "test_data_dir":         "data/in_order_formulas/test/",
+    "train_validation_file": "validation/in_order_formulas/train_validation.txt",
+    "test_validation_file":  "validation/in_order_formulas/test_validation.txt",
     "cpu_threads":           8
   },
   "model":     {
