--- a/configs/fine_tuning_config.json
+++ b/configs/fine_tuning_config.json
@@ -1,20 +1,20 @@
 {
   "data":      {
     "checkpoint_factor":     20,
-    "checkpoint_folder":     "checkpoints/l8_h256_io",
+    "checkpoint_folder":     "checkpoints/l4_h128_io",
     "vocab_folder":          "vocabs/sub_vocab_bert_file.txt",
-    "train_data_dir":        "data/derivation/train/",
-    "test_data_dir":         "data/derivation/test/",
-    "train_validation_file": "validation/derivation/train_validation.txt",
-    "test_validation_file":  "validation/derivation/test_validation.txt",
+    "train_data_dir":        "data/derivation/discriminative/train/",
+    "test_data_dir":         "data/derivation/discriminative/test/",
+    "train_validation_file": "validation/derivation/discriminative/train_validation.txt",
+    "test_validation_file":  "validation/derivation/discriminative/test_validation.txt",
     "cpu_threads":           8
   },
   "model":     {
     "vocab_size":        512,
     "max_seq_len":       256,
     "mask_prob":         0.15,
-    "num_layers":        8,
-    "hidden_size":       256,
+    "num_layers":        4,
+    "hidden_size":       128,
     "intermediate_size": 768,
     "num_heads":         4,
     "drop_rate":         0.1
@@ -25,13 +25,14 @@
     "test_buffer_size":  16,
     "train_blocks":      1,
     "test_blocks":       1,
-    "epochs":            50,
+    "epochs":            100,
     "learning_rate":     2e-5
   },
   "mode":      {
     "pre_training":    false,
+    "fine_tuning":     "DISCRIMINATIVE",
     "reload":          true,
-    "freeze":          true,
+    "freeze":          false,
     "freeze_interval": -2
   },
   "execution": {
