--- a/configs/fine_tuning_config.json
+++ b/configs/fine_tuning_config.json
@@ -3,10 +3,10 @@
     "checkpoint_factor":     20,
     "checkpoint_folder":     "checkpoints/l4_h128_io",
     "vocab_folder":          "vocabs/sub_vocab_bert_file.txt",
-    "train_data_dir":        "data/derivation/generative/train/",
-    "test_data_dir":         "data/derivation/generative/test/",
-    "train_validation_file": "validation/derivation/generative/train_validation.txt",
-    "test_validation_file":  "validation/derivation/generative/test_validation.txt",
+    "train_data_dir":        "data/equality/train/",
+    "test_data_dir":         "data/equality/test/",
+    "train_validation_file": "validation/equality/train_validation.txt",
+    "test_validation_file":  "validation/equality/test_validation.txt",
     "cpu_threads":           8
   },
   "model":     {
@@ -20,9 +20,9 @@
     "drop_rate":         0.1
   },
   "training":  {
-    "batch_size":        32,
-    "train_buffer_size": 128,
-    "test_buffer_size":  128,
+    "batch_size":        16,
+    "train_buffer_size": 41184,
+    "test_buffer_size":  41184,
     "train_blocks":      1,
     "test_blocks":       1,
     "epochs":            100,
@@ -30,7 +30,7 @@
   },
   "mode":      {
     "pre_training":    false,
-    "fine_tuning":     "GENERATIVE",
+    "fine_tuning":     "EQUALITY",
     "reload":          true,
     "freeze":          false,
     "freeze_interval": -6
